cookies-consent: Avoid cookie consent box flicker

--- a/insights/static/css/main.css
+++ b/insights/static/css/main.css
@@ -904,6 +904,7 @@ a {
   background-color: transparent !important; }
 
 .cookie-consent {
+  display: none;
   padding-top: 0 !important;
   width: 450px;
   height: 325px;
